--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -12,8 +12,8 @@ pipeline {
 
     environment {
         //TODO: Edit these vars as per your env
-        DEV_PROJECT = "youruser-books-dev"
-        STAGE_PROJECT = "youruser-books-stage"
+        DEV_PROJECT = "luciferccwu-books-dev"
+        STAGE_PROJECT = "luciferccwu-books-stage"
         APP_GIT_URL = "https://github.com/luciferccwu/DO288-apps"
         //NEXUS_SERVER = "http://nexus-common.apps.cluster.domain.example.com/repository/nodejs"
 	NEXUS_SERVER = "http://nexus-common.apps.ap45.prod.nextcle.com/repository/nodejs"
